--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,11 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <tomcat.version>8.0.32</tomcat.version>
 
-        <!-- Spring Versions -->
+        <!-- Spring Version -->
         <spring.version>4.3.5.RELEASE</spring.version>
+
+        <!-- AspectJ Version-->
+        <aspectj.version>1.8.10</aspectj.version>
 
         <!-- JSON Version -->
         <jackson-json.version>2.8.6</jackson-json.version>
@@ -36,7 +39,6 @@
         <webjars-bootstrap.version>3.3.7</webjars-bootstrap.version>
         <webjars-jquery.version>3.1.1</webjars-jquery.version>
         <webjars-noty.version>2.3.8</webjars-noty.version>
-        <webjars-datatables.version>1.10.13</webjars-datatables.version>
 
     </properties>
 
@@ -109,19 +111,6 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Spring -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
-            <version>${spring.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
         <!--Test-->
         <dependency>
             <groupId>junit</groupId>
@@ -182,9 +171,32 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${spring.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!--AspectJ-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
         </dependency>
 
         <!--JSON-->
